--- a/Ecommerce.Core/Ecommerce.Core.csproj
+++ b/Ecommerce.Core/Ecommerce.Core.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="dotenv.net" Version="3.2.0" />
     <PackageReference Include="FluentValidation" Version="11.9.2" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.2" />
+    <PackageReference Include="MailKit" Version="4.7.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
