--- a/Ecommerce.Core/Ecommerce.Core.csproj
+++ b/Ecommerce.Core/Ecommerce.Core.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="PDFsharp" Version="6.1.1" />
     <PackageReference Include="Stripe.net" Version="45.14.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.3" />
+    <PackageReference Include="Twilio" Version="7.6.0" />
   </ItemGroup>
 
 </Project>
